[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=45", "setuptools_scm[toml]>=6.2",]

[project]
classifiers = [ "Development Status :: 2 - Pre-Alpha", "Natural Language :: English", "Programming Language :: Python :: 3",]
description = "Photon Machine Protection System UI"
dynamic = [ "version", "readme", "dependencies", "optional-dependencies",]
keywords = []
name = "pmps-ui"
requires-python = ">=3.9"
[[project.authors]]
name = "SLAC National Accelerator Laboratory"

[options]
zip_safe = false
include_package_data = true

[project.license]
file = "LICENSE"

[project.scripts]
pmpsui = "pmpsui.main:main"

[tool.setuptools_scm]
write_to = "pmpsui/_version.py"

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "pmpsui*",]
namespaces = false

[tool.setuptools.dynamic.readme]
file = "README.rst"

[tool.setuptools.dynamic.dependencies]
file = [ "requirements.txt",]

[tool.setuptools.dynamic.optional-dependencies.test]
file = "dev-requirements.txt"
